--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,21 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+.fable/
+.fake/
+.vs/
+obj/
+bin/
+packages/
+paket-files/
+node_modules/
+src/Client/public/js/
+release.cmd
+release.sh
+.idea/
+*.DotSettings.user
+deploy
+
 # User-specific files
 *.suo
 *.user
